--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-  <title>JavaScript Selectors</title>
+  <title>JavaScript DOM</title>
 </head>
 <body>
   <header id="main-header" class="bg-secondary text-white p-4 mb-3">
@@ -27,6 +27,15 @@
       <li class="list-group-item">Item 3</li>
       <li class="list-group-item">Item 4</li>
     </ul>
+    <div id="output">
+
+    </div>
+    <br>
+    <button class="btn btn-dark btn-block" id="button">Click Here</button>
+    <br>
+    <div id="box" style="width:400px;height:200px;background:Ivory;">
+
+    </div>
    </div>
   </div>
 
